出售域名8个
出售域名8个

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 	承诺
 	承诺
 	承诺
-
-	<a href="http://www.aa.show/">出售域名：http://www.aa.show/</a>
+	<p>出售域名：</p>
+	<a href="http://www.aa.show/">http://www.aa.show/</a>
+	<a href="http://www.se.show/">http://www.se.show/</a>
+	<a href="http://www.wu.show/">http://www.wu.show/</a>
+	<a href="http://www.xi.show/">http://www.xi.show/</a>
+	<a href="http://www.jiandan.show/">http://www.jiandan.show/</a>
+	<a href="http://www.pingfan.show/">http://www.pingfan.show/</a>
+	<a href="http://www.pingan.show/">http://www.pingan.show/</a>
+	<a href="http://www.javascript.show/">http://www.javascript.show/</a>
 </body>
 </html>
