--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	
 
-	<a href="https://chengnuo.github.io/global/index.html">我的首页</a>
+	<a href="https://chengnuo.github.io/global/index.html">首页</a>
 	
 
 </body>
