--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	<p><a href="http://www.pingfan.show/">http://www.pingfan.show/</a></p>
 	<p><a href="http://www.pingan.show/">http://www.pingan.show/</a></p>
 	<p><a href="http://www.javascript.show/">http://www.javascript.show/</a></p>
-	创建分支
-	创建分支22
+	<a href="https://chengnuo.github.io/global/index.html">首页</a>
 </body>
 </html>
