--- a/global/index.html
+++ b/global/index.html
@@ -49,7 +49,7 @@
                 <div class="am-gallery-item">
                     <a href="javascript:;" class="">
                       <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg"  alt="某天 也许会相遇 相遇在这个好地方"/>
-                        <h3 class="am-gallery-title">项目A</h3>
+                        <h3 class="am-gallery-title">项目AA</h3>
                         <div class="am-gallery-desc">2375-09-26</div>
                     </a>
                 </div>
